--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BandiPubblici",
-  "name": "BandiPubblici App landing page",
+  "short_name": "Book2Book",
+  "name": "Book2Book",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
