--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bandipubblici-org-website",
+  "name": "book2book-org-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
