--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bowser": "^2.11.0",
     "nuka-carousel": "^5.4.1",
     "papaparse": "^5.3.2",
     "react": "^17.0.2",
